src/flake8_errmsg/snapshots/ruff__flake8_errmsg__tests__custom.snap
---
source: src/flake8_errmsg/mod.rs
expression: checks
---
- kind:
    RawStringInException: ~
  location:
    row: 5
    column: 23
  end_location:
    row: 5
    column: 53
  fix: ~
  parent: ~
- kind:
    FStringInException: ~
  location:
    row: 14
    column: 23
  end_location:
    row: 14
    column: 56
  fix: ~
  parent: ~
- kind:
    DotFormatInException: ~
  location:
    row: 18
    column: 23
  end_location:
    row: 18
    column: 81
  fix: ~
  parent: ~

